--- a/app/templates/v5/pages/email.html
+++ b/app/templates/v5/pages/email.html
@@ -1,6 +1,7 @@
 <!-- build:email_new -->
 {% extends "../_layout.html" %}
 {% assign page = 'email_new' %}
+{% assign MBArticleSuggest = true %} 
 {% block main %}
 <!-- endbuild -->
 
