--- a/app/templates/v5/pages/question.html
+++ b/app/templates/v5/pages/question.html
@@ -1,6 +1,7 @@
 <!-- build:question_new -->
 {% extends "../_layout.html" %}
 {% assign page = 'question_new' %}
+{% assign MBArticleSuggest = true %}
 {% assign form_begin = "<form action='/question-precreate.html' enctype='multipart/form-data' class='new_email' id='new_email' method='go' novalidate='novalidate'>" %}
 {% assign customer_answer_count = question.answers_customer_count %}
 {% assign agent_answer_count = question.answers_agent_count %}
