--- a/app/templates/foundation/_layout.html
+++ b/app/templates/foundation/_layout.html
@@ -610,7 +610,7 @@
     <!-- endbuild -->
     <!-- build:js scripts/main.js -->
     <script src="scripts/portal-reqs.js"></script>
-    <script src="scripts/desk.portal.js"></script>
+    <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
 </html>
