--- a/app/templates/foundation/pages/search.html
+++ b/app/templates/foundation/pages/search.html
@@ -1,6 +1,7 @@
 <!-- build:page_search_result -->
 {% extends "../_layout.html" %}
 {% assign page = 'page_search_result' %}
+{% assign MBSearchPage = true %} 
 {% block main %}
 <!-- endbuild -->
 
