closes #4, closes #2, closes #1

--- a/app/templates/v4/pagination.html
+++ b/app/templates/v4/pagination.html
@@ -1,11 +1,11 @@
-{{ more_search_block }}
+{{ more_topic_block }}
 
-<div id='paginate_block'> <br> <div id='results_string'></div><br> <div class='pagination'> <span class='previous_page disabled'>&lt;&lt;</span> <em class='current'>1</em> <a href='?page=2' rel='next'>2</a> <a href='?page=3'>3</a> <a class='next_page' href='?page=2' rel='next'>&gt;&gt;</a> </div> </div>
+<div id='paginate_block'> <br> <div id='results_string'></div><br> <div class='pagination'> <span class='previous_page disabled'>&lt;&lt;</span> <em class='current'>1</em> <a href='/customer/portal/articles/search?page=2' rel='next'>2</a> <a href='/customer/portal/articles/search?page=3'>3</a> <a class='next_page' href='/customer/portal/articles/search?page=2' rel='next'>&gt;&gt;</a> </div> </div>
 
 
 {{ more_article_block }}
 
-<div id='paginate_block'> <br> <div id='results_string'></div><br> <div class='pagination'> <span class='previous_page disabled'>&lt;&lt;</span> <em class='current'>1</em> <a href='?page=2' rel='next'>2</a> <a href='?page=3'>3</a> <a class='next_page' href='?page=2' rel='next'>&gt;&gt;</a> </div> </div>
+<div id='paginate_block'> <br> <div id='results_string'></div><br> <div class='pagination'> <span class='previous_page disabled'>&lt;&lt;</span> <em class='current'>1</em> <a href='/customer/portal/articles/search?page=2' rel='next'>2</a> <a href='/customer/portal/articles/search?page=3'>3</a> <a class='next_page' href='/customer/portal/articles/search?page=2' rel='next'>&gt;&gt;</a> </div> </div>
 
-"more_search_block": "<div id='paginate_block'> <br> <div id='results_string'></div><br> <div class='pagination'> <span class='previous_page disabled'>&lt;&lt;</span> <em class='current'>1</em> <a href='?page=2' rel='next'>2</a> <a href='?page=3'>3</a> <a class='next_page' href='?page=2' rel='next'>&gt;&gt;</a> </div> </div>",
-"more_article_block: "<div id='paginate_block'> <br> <div id='results_string'></div><br> <div class='pagination'> <span class='previous_page disabled'>&lt;&lt;</span> <em class='current'>1</em> <a href='?page=2' rel='next'>2</a> <a href='?page=3'>3</a> <a class='next_page' href='?page=2' rel='next'>&gt;&gt;</a> </div> </div>",
+"more_search_block": "<div id='paginate_block'> <br> <div id='results_string'></div><br> <div class='pagination'> <span class='previous_page disabled'>&lt;&lt;</span> <em class='current'>1</em> <a href='/customer/portal/articles/search-2' rel='next'>2</a> <a href='/customer/portal/articles/search-3'>3</a> <a class='next_page' href='/customer/portal/articles/search-2' rel='next'>&gt;&gt;</a> </div> </div>",
+"more_article_block: "<div id='paginate_block'> <br> <div id='results_string'></div><br> <div class='pagination'> <span class='previous_page disabled'>&lt;&lt;</span> <em class='current'>1</em> <a href='/customer/portal/articles/topic-2' rel='next'>2</a> <a href='/customer/portal/articles/topic-3'>3</a> <a class='next_page' href='/customer/portal/articles/topic-2' rel='next'>&gt;&gt;</a> </div> </div>",
